Archive2/60/21688fd9c1dc24/output
main.cpp: In function 'int main()':
main.cpp:12:5: error: lvalue required as increment operand
   ++a;
     ^
